fix autofill, scrollbar, making modals (still glass bgs to fix)

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,6 +1,18 @@
 input:-webkit-autofill,
 textarea:-webkit-autofill,
-select:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
-    -webkit-text-fill-color: transparent !important;
+select:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #ffffff;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #23232329;
+}
+
+/* custom scroll bar */
+.custom-scrollbar {
+    overscroll-behavior-x: contain;
+    scrollbar-width: thin;
+    scrollbar-color: rgba(106, 153, 153, 0.6) transparent;
 }
